# Vulkan-Demo

./: .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
libs/: .gitignore
shaders/: shaders.frag  shaders.vert  vert.spv
src/: Application.cpp  Application.hpp  FPSCamera.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  State.hpp  Vertex.cpp  Vertex.hpp  VulkanSetup.cpp  VulkanSetup.hpp  Window.cpp  Window.hpp  main.cpp
src/Models/: Box.cpp  Box.hpp  Bridge.cpp  Bridge.hpp  Commodore.cpp  Commodore.hpp  Hatchet.cpp  Hatchet.hpp  House.cpp  House.hpp  Model.cpp  Model.hpp  Skull.cpp  Skull.hpp
